# livekit-plugins-fireredchat-pvad

./: NOTICE  README.md  pyproject.toml
livekit/plugins/fireredchat_pvad/: __init__.py  log.py  vad.py
