[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "livekit-plugins-fireredchat-pvad"
dynamic = ["version"]
description = "FireRedChat pVAD model for LiveKit Agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9.0"
authors = [{ name = "FireRedTeam", email = "luanbu@xiaohongshu.com" }]
keywords = ["webrtc", "realtime", "audio", "video", "livekit", "firered", "fireredchat"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "livekit-agents>=1.0.22",
    "onnxruntime>=1.19.0",
    "speechbrain>=1.0.3",
    "numpy>=1.26"
]

[tool.hatch.version]
path = "livekit/plugins/fireredchat_pvad/version.py"

[tool.hatch.build.targets.wheel]
packages = ["livekit"]

[tool.hatch.build.targets.sdist]
include = ["/livekit"]
